--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,22 @@
-// Начните писать стили здесь
+// Global
+@import (less) "global/fonts.css";
+@import (less) "global/normalize.css";
+@import "global/global.less";
+@import "global/colors.less";
+
+// Blocks
+@import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/logo-heading-icon.less";
+@import "blocks/logo-heading-image.less";
+@import "blocks/text.less";
+@import "blocks/site-list.less";
+@import "blocks/page-heading.less";
+@import "blocks/main-nav.less";
+@import "blocks/promo.less";
+@import "blocks/button.less";
+@import "blocks/page-main.less";
+@import "blocks/bundles.less";
+@import "blocks/features.less";
+@import "blocks/page-footer.less";
+@import "blocks/location.less";
