Переносит промежуточный результат работы на ноутбук

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -7,4 +7,13 @@
   background-color: @main-green;
   color: @main-white;
   text-transform: uppercase;
+
+  &:hover {
+    background-color: @additional-green;
+  }
+
+  &:active {
+    background-color: @additional-green;
+    color: @opacity-white;
+  }
 }
