--- a/source/less/blocks/text.less
+++ b/source/less/blocks/text.less
@@ -1,9 +1,8 @@
 .text {
   font-family: Arial, sans-serif;
   font-weight: normal;
+  color: @special-grey;
 
-  &--large {
-    font-family: "Oswald", Arial, sans-serif;
-    font-weight: normal;
-  }
+  font-size: 14px;
+  line-height: 1em;
 }
