--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,16 +7,18 @@
 // Blocks
 @import "blocks/page.less";
 @import "blocks/page-header.less";
-@import "blocks/logo-heading-icon.less";
-@import "blocks/logo-heading-image.less";
 @import "blocks/text.less";
 @import "blocks/site-list.less";
 @import "blocks/page-heading.less";
 @import "blocks/main-nav.less";
 @import "blocks/promo.less";
+@import "blocks/heading.less";
 @import "blocks/button.less";
 @import "blocks/page-main.less";
 @import "blocks/bundles.less";
 @import "blocks/features.less";
+@import "blocks/example.less";
 @import "blocks/page-footer.less";
 @import "blocks/location.less";
+@import "blocks/contacts.less";
+@import "blocks/copyright.less";
