--- a/source/less/blocks/bundles.less
+++ b/source/less/blocks/bundles.less
@@ -1,3 +1,8 @@
+.bundles {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .bundles__list {
   list-style: none;
   margin: 0;
@@ -6,4 +11,28 @@
 
 .bundles__item {
   background-color: @basic-grey;
+}
+
+.bundles__title {
+  text-transform: uppercase;
+}
+
+// .bundles__image {
+// }
+
+.bundles__text {
+  line-height: 18px;
+}
+
+.bundles__link {
+  font-size: 16px;
+  line-height: 1em;
+
+  color: @main-black;
+  
+  text-transform: uppercase;
+
+  &:active {
+    opacity: 0.3;
+  }
 }
