--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,5 +1,20 @@
+.features {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .features__list {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+// .features__item {
+// }
+
+// .features__title {
+// }
+
+.features__description {
+  line-height: 18px;
 }
