--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -1,7 +1,24 @@
-.location__wrapper {
+.location {
   background-color: @main-white;
+}
+
+.location__wrapper {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.location__title {
+  color: @special-black;
+  text-transform: uppercase;
+}
+
+.location__text {
+  color: @special-grey;
+  line-height: 20px;
 }
 
 .location__map {
   width: 100%;
+  border: none;
+  display: block;
 }
