--- a/source/less/global/colors.less
+++ b/source/less/global/colors.less
@@ -1,5 +1,13 @@
 @main-green: #68B738;
-@main-white: #ffffff;
+@main-white: #FFFFFF;
 @main-black: #000000;
 
-@basic-grey: #f2f2f2;
+@basic-grey: #F2F2F2;
+
+@special-grey: #444444;
+@special-black: #111111;
+
+@additional-green: #5EAA2F;
+@additional-grey: #EAEAEA;
+
+@opacity-white: rgba(255, 255, 255, 0.3);
