--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,18 +1,14 @@
 // html {
-
 // }
 
-// body {
+a {
+  text-decoration: none;
+}
 
-// }
-
-// a {
-
-// }
-
-// img {
-
-// }
+img {
+  max-width: 100%;
+  height: auto;
+}
 
 .visually-hidden {
   position: absolute;
@@ -24,7 +20,7 @@
   padding: 0;
 
   white-space: nowrap;
-  
+
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
