--- a/source/less/global/colors.less
+++ b/source/less/global/colors.less
@@ -9,5 +9,14 @@
 
 @additional-green: #5EAA2F;
 @additional-grey: #EAEAEA;
+@additional-black: #222222;
 
 @opacity-white: rgba(255, 255, 255, 0.3);
+@opacity-special-grey: rgba(68, 68, 68, 0.3);
+
+@grey-button-hover: #EBEBEB;
+
+@grey-input: #E7E7E7;
+@grey-input-hover: #CDCDCD;
+
+@red-input-error: #FF8282;
