Исправляет ошибки по stylelint

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,7 +3,7 @@
 }
 
 .button__main {
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   background-color: @main-green;
   color: @main-white;
   text-transform: uppercase;
