--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,6 +4,7 @@
 
 .page-header__logo {
   margin-left: 20px;
+
   &:hover {
     opacity: 0.8;
   }
@@ -13,7 +14,8 @@
   }
 
   &--actual {
-    &:hover, &:active {
+    &:hover,
+    &:active {
       opacity: 1;
     }
   }
