--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,7 +5,7 @@
 }
 
 .site-list__link {
-  font-family: "Oswald Medium", Arial, sans-serif;
+  font-family: "Oswald Medium", "Arial", sans-serif;
   font-size: 20px;
   line-height: 1em;
 
@@ -22,7 +22,8 @@
   }
 
   &--actual {
-    &:hover, &:active {
+    &:hover,
+    &:active {
       opacity: 1;
     }
   }
