--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -37,7 +37,7 @@
   outline: none;
   background: none;
 
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 20px;
 
