--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -8,7 +8,7 @@
   padding: 0;
   min-height: 100%;
 
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: normal;
 
   color: @main-black;
