--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,7 +5,7 @@
 }
 
 .site-list__link {
-  font-family: "Oswald Medium", "Arial", sans-serif;
+  font-weight: 500;
   font-size: 20px;
   line-height: 1em;
 
