--- a/source/less/global/fonts.css
+++ b/source/less/global/fonts.css
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: "Oswald Medium";
+  font-family: "Oswald";
   font-style: normal;
   font-weight: 500;
   src: local("Oswald"),
