--- a/source/less/blocks/bundles.less
+++ b/source/less/blocks/bundles.less
@@ -7,6 +7,14 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+
+  @media (min-width: @desktop-width) {
+    grid-template-rows: none;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .bundles__item {
