--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -2,6 +2,9 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .contacts__link {
