--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -7,6 +7,16 @@
   margin-right: 20px;
 }
 
+.example__grid-wrapper {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+
+  @media (min-width: @desktop-width) {
+    grid-template-rows: none;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 // .example__title {
 // }
 
