--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -7,6 +7,18 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+
+  @media (min-width: @tablet-width) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-rows: none;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // .features__item {
