--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -7,6 +7,11 @@
   margin-right: 20px;
 }
 
+.location__content-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .location__title {
   color: @special-black;
   text-transform: uppercase;
