--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,17 @@
 .page-header {
   margin-top: 10px;
+
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+}
+
+.page-header__main-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+
+  width: 100%;
 }
 
 .page-header__logo {
@@ -19,4 +31,8 @@
       opacity: 1;
     }
   }
+}
+
+.page-header__logo:nth-child(2) {
+  margin-left: 0;
 }
