--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,3 +1,6 @@
+@tablet-width: 768px;
+@desktop-width: 1440px;
+
 .page {
   height: 100%;
 }
@@ -13,4 +16,7 @@
 
   color: @main-black;
   background-color: @main-white;
+
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
 }
