--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -3,6 +3,16 @@
   margin-right: 20px;
 }
 
+.extra__wrapper {
+  display: grid;
+  grid-template-rows: 1fr;
+
+  @media (min-width: @desktop-width) {
+    grid-template-rows: none;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .extra__title {
   font-size: 24px;
   line-height: 1em;
@@ -12,6 +22,22 @@
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.extra__item {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+
+  @media (min-width: @tablet-width) {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-rows: none;
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .extra__item-name {
@@ -29,6 +55,10 @@
   background-color: @main-green;
   background-image: url("../../img/extra/special-offer.png");
   background-repeat: no-repeat;
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+  }
 }
 
 .extra__special-offer-text {
