--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import (less) "global/normalize.css";
 @import "global/global.less";
 @import "global/colors.less";
+@import (less) "global/animations.css";
 
 // Blocks
 @import "blocks/page.less";
