--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,3 +1,11 @@
+.contacts {
+  height: 63px;
+
+  @media (min-width: @tablet-width) {
+    height: min-content;
+  }
+}
+
 .contacts__list {
   list-style: none;
   margin: 0;
@@ -5,6 +13,22 @@
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+
+  margin-top: 20px;
+  margin-bottom: 21px;
+
+  @media (min-width: @tablet-width) {
+    width: min-content;
+    margin: 0 auto;
+    column-gap: 20px;
+  }
+}
+
+.contacts__item {
+  width: 30px;
+  height: 30px;
+
+  margin: auto;
 }
 
 .contacts__link {
