--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,8 +1,23 @@
+.copyright {
+  border-top: 1px solid @gray-overline;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
+}
+
 .copyright__link {
   font-size: 16px;
   line-height: 18px;
 
   color: @special-grey;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: left;
+  align-items: center;
+
+  margin-top: 22px;
 
   &:hover path {
     fill: @main-green;
@@ -10,5 +25,23 @@
 
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+
+    display: flex;
+    justify-content: flex-end;
+
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+}
+
+.copyright__link-image {
+  justify-self: end;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 22px;
   }
 }
