--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -1,25 +1,104 @@
 .location {
   background-color: @main-white;
+
+  position: relative;
 }
 
 .location__wrapper {
   margin-left: 20px;
   margin-right: 20px;
+  padding-top: 28px;
+  padding-bottom: 26px;
+  box-sizing: border-box;
+
+  height: 114px;
+
+  align-items: center;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 71px;
+    margin-right: 72px;
+    padding-top: 62px;
+    padding-bottom: 51px;
+    box-sizing: border-box;
+
+    height: 201px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    left: 0.5%;
+    top: 2%;
+
+    width: 570px;
+    height: 201px;
+
+    margin: 0;
+    padding-top: 62px;
+    padding-bottom: 59px;
+    padding-left: 76px;
+    padding-right: 89px;
+
+    background-color: @main-white;
+
+    z-index: 1;
+  }
 }
 
 .location__content-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  column-gap: 18px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 14px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 0;
+
+    column-gap: 87px;
+  }
 }
 
 .location__title {
   color: @special-black;
   text-transform: uppercase;
+
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 21px;
+  }
 }
 
 .location__text {
   color: @special-grey;
   line-height: 20px;
+
+  justify-self: end;
+
+  padding: 0;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    text-align: right;
+
+    font-size: 16px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+  }
+}
+
+.location__text-space {
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin-top: 16px;
+  }
 }
 
 .location__map {
