--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,119 @@
 .main-nav {
-  margin-right: 20px;
+  @media (min-width: @tablet-width) {
+    margin-left: auto;
+    margin-top: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 69px;
+  }
+}
+
+.main-nav__wrapper {
+  background-color: @main-white;
+
+  z-index: 1;
+
+  @media (min-width: @tablet-width) {
+    background-color: transparent;
+  }
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 14px;
+  right: 20px;
+
+  z-index: 2;
+
+  display: block;
+
+  width: 28px;
+  height: 34px;
+
+  background-color: @main-white;
+
+  cursor: pointer;
+
+  border: none;
+  padding: 0;
+  margin: 0;
+
+  &:hover,
+  &:active {
+    background-color: @main-white;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 0;
+
+  width: 24px;
+  height: 2px;
+
+  background-color: @main-black;
+  box-shadow: 0 8px 0 0 @main-black, 0 16px 0 0 @main-black;
+}
+
+.main-nav--opened .main-nav__toggle::before,
+.main-nav--opened .main-nav__toggle::after {
+  content: "";
+  position: absolute;
+  top: 19px;
+  right: 0;
+
+  width: 24px;
+  height: 2px;
+
+  background-color: @main-black;
+}
+
+.main-nav--opened .main-nav__toggle::before {
+  transform: rotate(45deg);
+  box-shadow: none;
+}
+
+.main-nav--opened .main-nav__toggle::after {
+  transform: rotate(-45deg);
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .site-list__item {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    position: absolute;
+    top: 64px;
+    left: 0;
+
+    width: 100%;
+
+    text-align: center;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: absolute;
+    top: 64px;
+    left: 0;
+
+    width: 100%;
+
+    text-align: center;
+  }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
 }
