--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,6 +5,10 @@
 .page-footer__wrapper {
   margin-left: 20px;
   margin-right: 20px;
+  margin-top: 39px;
+  margin-bottom: 22px;
+
+  text-align: center;
 
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -12,10 +16,25 @@
   @media (min-width: @tablet-width) {
     grid-template-rows: none;
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 55px;
+    margin-bottom: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 110px;
+    margin-right: 110px;
+    margin-top: 57px;
+    margin-bottom: 58px;
   }
 }
 
 .page-footer__logo {
+  border-bottom: 1px solid @gray-overline;
+
   &:hover {
     opacity: 0.8;
   }
@@ -29,5 +48,11 @@
     &:active {
       opacity: 1;
     }
+  }
+
+  @media (min-width: @tablet-width) {
+    text-align: left;
+    align-self: center;
+    border: none;
   }
 }
