--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -8,6 +8,24 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
+
+    min-width: 440px;
+
+    margin-right: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 110px;
+  }
+}
+
+.site-list__item {
+  @media (min-width: @tablet-width) {
+    margin-left: 34px;
+
+    &:first-child {
+      margin-left: 0;
+    }
   }
 }
 
@@ -19,6 +37,16 @@
   color: @main-black;
 
   text-transform: uppercase;
+
+  position: relative;
+  display: block;
+  padding: 22px;
+
+  border-bottom: 1px solid @gray-border;
+
+  &--first {
+    border-top: 1px solid @gray-border;
+  }
 
   &:hover {
     opacity: 0.6;
@@ -32,6 +60,32 @@
     &:hover,
     &:active {
       opacity: 1;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+
+    padding: 0;
+    padding-bottom: 10px;
+
+    border: none;
+
+    &--actual {
+      border-bottom: 2px solid @basic-green;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 20px;
+    line-height: auto;
+
+    color: @main-white;
+
+    &--actual {
+      border-color: @main-white;
     }
   }
 }
