--- a/source/less/global/colors.less
+++ b/source/less/global/colors.less
@@ -3,6 +3,7 @@
 @main-black: #000000;
 
 @basic-grey: #F2F2F2;
+@basic-green: #68B738;
 
 @special-grey: #444444;
 @special-black: #111111;
@@ -13,6 +14,7 @@
 
 @opacity-white: rgba(255, 255, 255, 0.3);
 @opacity-special-grey: rgba(68, 68, 68, 0.3);
+@opacity-black: (0, 0, 0, 0.4);
 
 @grey-button-hover: #EBEBEB;
 
@@ -20,3 +22,9 @@
 @grey-input-hover: #CDCDCD;
 
 @red-input-error: #FF8282;
+
+@gray-border: #E6E6E6;
+
+@gray-overline: #D9D9D9;
+
+@gray-scale: #DCDCDC;
