--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -2,6 +2,10 @@
   background-color: @main-white;
 
   position: relative;
+
+  &--inner {
+    background-color: @basic-grey;
+  }
 }
 
 .location__wrapper {
