--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,5 @@
 // Global
-@import (less) "global/fonts.css";
+@import "global/fonts.less";
 @import (less) "global/normalize.css";
 @import "global/global.less";
 @import "global/colors.less";
