--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,6 +2,14 @@
   display: flex;
   flex-flow: column wrap;
   align-content: center;
+
+  &--border {
+    border-bottom: 1px solid @gray-overline;
+
+    @media (min-width: @tablet-width) {
+      border: none;
+    }
+  }
 }
 
 .page-header__main-wrapper {
