--- a/source/less/blocks/page-heading.less
+++ b/source/less/blocks/page-heading.less
@@ -2,4 +2,8 @@
   font-size: 36px;
   line-height: 1em;
   font-weight: normal;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+  }
 }
