--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -87,5 +87,10 @@
     &--actual {
       border-color: @main-white;
     }
+
+    &--inner {
+      color: @main-black;
+      border-color: @main-green;
+    }
   }
 }
