--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -60,8 +60,8 @@
 }
 
 .page-header__logo-icon {
-  width: 33px;
-  height: 38px;
+  min-width: 33px;
+  min-height: 38px;
 }
 
 .page-header__logo-title {
@@ -72,5 +72,15 @@
 
   @media (min-width: @tablet-width) {
     display: none;
+  }
+}
+
+.page-header__logo-image {
+  @media (min-width: @tablet-width) {
+    min-width: 174px;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 202px;
   }
 }
