--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -28,6 +28,10 @@
 
     z-index: -1;
 
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/promo/page-header-cat@2x.png");
+    }
+
     @media (min-width: @tablet-width) {
       display: none;
     }
@@ -42,7 +46,7 @@
       min-height: 694px;
 
       right: 0;
-      top: -110px;
+      top: -114px;
 
       background-color: @main-green;
       background-image: url("../../img/promo/page-header-cat-large.png");
@@ -50,6 +54,10 @@
       background-size: cover;
 
       z-index: -1;
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../../img/promo/page-header-cat-large@2x.png");
+      }
     }
   }
 }
@@ -101,15 +109,17 @@
     order: 4;
 
     min-height: 526px;
+    min-width: 709px;
 
-    margin-left: 30px;
+    margin-left: 29px;
     margin-right: 30px;
 
     position: relative;
   }
 
   @media (min-width: @desktop-width) {
-    min-height: 185px;
+    min-height: 136px;
+    min-width: 0;
   }
 }
 
@@ -120,9 +130,24 @@
   margin-top: 29px;
 
   @media (min-width: @tablet-width) {
+    width: 709px;
+    height: 609px;
+
     margin: 0;
 
+    z-index: -1;
+
     position: absolute;
+    top: -15%;
+    left: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 552px;
+    height: 499px;
+
+    top: -350px;
+    left: 42%;
   }
 }
 
