--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -19,7 +19,7 @@
 
   margin-top: 22px;
 
-  &:hover path {
+  &:hover .copyright__link-image {
     fill: @main-green;
   }
 
@@ -40,6 +40,7 @@
 
 .copyright__link-image {
   justify-self: end;
+  fill: @gray-social;
 
   @media (min-width: @tablet-width) {
     margin-left: 22px;
