--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -215,6 +215,11 @@
   height: 14px;
 }
 
+.main-form__mail-icon {
+  fill: none;
+  stroke: @main-black;
+}
+
 .main-form__input[type="radio"] + .main-form__label {
   margin-left: 45px;
 
