Завершил автоматизацию сборки проекта

--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -186,7 +186,7 @@
   height: 289px;
 
   background-color: @main-green;
-  background-image: url("../../img/extra/special-offer.png");
+  background-image: url("../img/extra/special-offer.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -198,7 +198,7 @@
   text-align: center;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/extra/special-offer@2x.png");
+    background-image: url("../img/extra/special-offer@2x.png");
   }
 
   @media (min-width: @tablet-width) {
@@ -258,7 +258,7 @@
     width: 78px;
     height: 80px;
 
-    background-image: url("../../img/extra/icon-gift.svg");
+    background-image: url("../img/extra/icon-gift.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
