--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -77,19 +77,19 @@
     }
 
     &--first::before {
-      background-image: url("../../img/features/1.png");
+      background-image: url("../img/features/1.png");
     }
 
     &--second::before {
-      background-image: url("../../img/features/2.png");
+      background-image: url("../img/features/2.png");
     }
 
     &--third::before {
-      background-image: url("../../img/features/3.png");
+      background-image: url("../img/features/3.png");
     }
 
     &--fourth::before {
-      background-image: url("../../img/features/4.png");
+      background-image: url("../img/features/4.png");
     }
   }
 }
@@ -140,7 +140,7 @@
     width: 30px;
     height: 32px;
 
-    background-image: url("../../img/features/icon_leaf.svg");
+    background-image: url("../img/features/icon_leaf.svg");
   }
 
   &--powder::after {
@@ -149,7 +149,7 @@
 
     left: -64px;
 
-    background-image: url("../../img/features/icon_tub.svg");
+    background-image: url("../img/features/icon_tub.svg");
 
     @media (min-width: @tablet-width) {
       left: 27px;
@@ -162,7 +162,7 @@
 
     left: -62px;
 
-    background-image: url("../../img/features/icon_eat.svg");
+    background-image: url("../img/features/icon_eat.svg");
 
     @media (min-width: @tablet-width) {
       left: 30px;
@@ -173,7 +173,7 @@
     width: 32px;
     height: 33px;
 
-    background-image: url("../../img/features/icon_alarm.svg");
+    background-image: url("../img/features/icon_alarm.svg");
   }
 
   @media (min-width: @tablet-width) {
