--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -22,14 +22,14 @@
     min-height: 302px;
 
     background-color: @main-green;
-    background-image: url("../../img/promo/page-header-cat.png");
+    background-image: url("../img/promo/page-header-cat.png");
     background-repeat: no-repeat;
     background-size: cover;
 
     z-index: -1;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/promo/page-header-cat@2x.png");
+      background-image: url("../img/promo/page-header-cat@2x.png");
     }
 
     @media (min-width: @tablet-width) {
@@ -49,14 +49,14 @@
       top: -114px;
 
       background-color: @main-green;
-      background-image: url("../../img/promo/page-header-cat-large.png");
+      background-image: url("../img/promo/page-header-cat-large.png");
       background-repeat: no-repeat;
       background-size: cover;
 
       z-index: -1;
 
       @media (min-resolution: 2dppx) {
-        background-image: url("../../img/promo/page-header-cat-large@2x.png");
+        background-image: url("../img/promo/page-header-cat-large@2x.png");
       }
     }
   }
