--- a/source/less/blocks/bundles.less
+++ b/source/less/blocks/bundles.less
@@ -119,7 +119,7 @@
 
       left: 28px;
       top: 16px;
-      background-image: url("../../img/bundles/cat-slim.svg");
+      background-image: url("../img/bundles/cat-slim.svg");
 
       @media (min-width: @tablet-width) {
         width: 140px;
@@ -152,7 +152,7 @@
 
       left: 10px;
       top: 33px;
-      background-image: url("../../img/bundles/cat-pro.svg");
+      background-image: url("../img/bundles/cat-pro.svg");
 
       @media (min-width: @tablet-width) {
         width: 268px;
@@ -252,7 +252,7 @@
     left: 121px;
     top: 55%;
 
-    background-image: url("../../img/bundles/arrow.svg");
+    background-image: url("../img/bundles/arrow.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
