--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -280,7 +280,7 @@
   left: -43px;
   top: 8px;
 
-  background-image: url("../../img/main-form/checkbox-checked.svg");
+  background-image: url("../img/main-form/checkbox-checked.svg");
   background-repeat: no-repeat;
 }
 
