--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -28,6 +28,7 @@
 
 .page-header__logo {
   margin-left: 20px;
+  margin-bottom: 2px;
 
   &:nth-child(2) {
     margin-left: 0;
@@ -68,7 +69,7 @@
   width: 101px;
   height: 18px;
 
-  margin-right: 35px;
+  margin-right: 52px;
 
   @media (min-width: @tablet-width) {
     display: none;
