--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,1 +1,17 @@
-//
+.page-main__title {
+  margin-left: 20px;
+  margin-top: 27px;
+  margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 61px;
+    margin-left: 30px;
+    margin-bottom: 133px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 72px;
+    margin-left: 110px;
+    margin-bottom: 125px;
+  }
+}
