--- a/source/less/blocks/bundles.less
+++ b/source/less/blocks/bundles.less
@@ -33,6 +33,8 @@
     grid-template-columns: repeat(2, 1fr);
 
     column-gap: 80px;
+
+    margin-top: 71px;
   }
 }
 
@@ -61,7 +63,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 47px 51px 59px 52px;
+    padding: 77px 51px 59px 52px;
 
     min-width: 570px;
     min-height: 374px;
@@ -81,8 +83,8 @@
     height: 50px;
     background-color: @basic-green;
     position: absolute;
-    left: 20px;
-    top: 20px;
+    left: 22px;
+    top: 24px;
     border-radius: 50%;
 
     @media (min-width: @tablet-width) {
@@ -90,16 +92,16 @@
       height: 200px;
 
       left: unset;
-      top: 25%;
-      right: 8%;
+      top: 24.8%;
+      right: 8.5%;
     }
 
     @media (min-width: @desktop-width) {
       width: 100px;
       height: 100px;
 
-      left: 7%;
-      top: 7%;
+      left: 9.2%;
+      top: 12.5%;
       right: unset;
     }
   }
@@ -117,8 +119,8 @@
       width: 36px;
       height: 50px;
 
-      left: 28px;
-      top: 16px;
+      left: 29px;
+      top: 21px;
       background-image: url("../img/bundles/cat-slim.svg");
 
       @media (min-width: @tablet-width) {
@@ -126,8 +128,8 @@
         height: 194px;
 
         left: unset;
-        right: 90px;
-        top: 85px;
+        right: 92px;
+        top: 81px;
 
         background-size: 140px 194px;
       }
@@ -136,9 +138,9 @@
         width: 70px;
         height: 97px;
 
-        left: 10%;
+        left: 11.7%;
         right: unset;
-        top: 5%;
+        top: 11%;
 
         background-size: 70px 97px;
       }
@@ -150,8 +152,8 @@
       width: 67px;
       height: 28px;
 
-      left: 10px;
-      top: 33px;
+      left: 13px;
+      top: 35px;
       background-image: url("../img/bundles/cat-pro.svg");
 
       @media (min-width: @tablet-width) {
@@ -159,8 +161,8 @@
         height: 112px;
 
         left: unset;
-        right: 20px;
-        top: 140px;
+        right: 28px;
+        top: 135px;
 
         background-size: 268px 112px;
       }
@@ -169,9 +171,9 @@
         width: 134px;
         height: 56px;
 
-        left: 4%;
+        left: 5.8%;
         right: unset;
-        top: 13%;
+        top: 18%;
 
         background-size: 134px 56px;
       }
@@ -190,7 +192,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 120px;
+    margin-left: 162px;
   }
 }
 
@@ -219,6 +221,7 @@
 
   @media (min-width: @desktop-width) {
     margin-top: 73px;
+    margin-bottom: 0;
 
     max-width: none;
   }
@@ -249,19 +252,19 @@
     height: 12px;
     position: absolute;
 
-    left: 121px;
+    left: 100px;
     top: 55%;
 
     background-image: url("../img/bundles/arrow.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
-      left: 181px;
+      left: 131px;
       top: 60%;
     }
 
     @media (min-width: @desktop-width) {
-      left: 188px;
+      left: 133px;
     }
   }
 
@@ -269,5 +272,11 @@
     font-size: 20px;
     line-height: auto;
     border-top: none;
+
+    margin-top: 15px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 13px;
   }
 }
