--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,21 +1,46 @@
 .contacts {
   height: 63px;
 
+  position: relative;
+
   @media (min-width: @tablet-width) {
     height: min-content;
+  }
+
+  @media (max-width: @mobile-width-only) {
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: @gray-overline;
+
+      top: -12%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    &::after {
+      top: 88%;
+    }
   }
 }
 
 .contacts__list {
   list-style: none;
-  margin: 0;
   padding: 0;
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 
-  margin-top: 20px;
+  margin-top: 14px;
   margin-bottom: 21px;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: min-content;
+  column-gap: 22px;
 
   @media (min-width: @tablet-width) {
     width: min-content;
@@ -29,6 +54,36 @@
   height: 30px;
 
   margin: auto;
+
+  box-sizing: border-box;
+
+  &:first-child {
+    padding-right: 7px;
+    padding-top: 2px;
+
+    @media (min-width: @tablet-width) {
+      padding-right: 0;
+      padding-top: 3px;
+    }
+  }
+
+  &:nth-child(2) {
+    padding-top: 3px;
+
+    @media (min-width: @tablet-width) {
+      padding-top: 4px;
+      padding-right: 2px;
+    }
+  }
+
+  &:last-child {
+    position: relative;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 35px;
+    height: 35px;
+  }
 }
 
 .contacts__link {
@@ -52,5 +107,35 @@
   &--stroke {
     fill: none;
     stroke: @gray-social;
+  }
+
+  &--first {
+    @media (max-width: @mobile-width-only) {
+      width: 23px;
+      height: 16px;
+    }
+  }
+
+  &--second {
+    @media (max-width: @mobile-width-only) {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  &--third {
+    @media (max-width: @mobile-width-only) {
+      width: 22px;
+      height: 22px;
+    }
+
+    @media (min-width: @tablet-width) {
+      width: 28px;
+      height: 33px;
+
+      position: absolute;
+      left: -6px;
+      top: -2px;
+    }
   }
 }
