--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,6 +1,8 @@
 .example {
   background-color: @additional-grey;
 
+  min-height: 705px;
+
   @media (min-width: @tablet-width) {
     background-color: @main-white;
 
@@ -9,6 +11,7 @@
 
   @media (min-width: @desktop-width) {
     border: none;
+    min-height: unset;
   }
 }
 
@@ -20,6 +23,10 @@
     margin: 0;
 
     padding-top: 43px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 23px;
   }
 }
 
@@ -63,6 +70,7 @@
 }
 
 .example__title {
+  margin: 0;
   margin-left: 20px;
   margin-right: 20px;
 
@@ -88,6 +96,12 @@
   @media (min-width: @tablet-width) {
     font-size: 16px;
     line-height: 24px;
+
+    margin-right: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 0;
   }
 }
 
@@ -118,7 +132,7 @@
     grid-template-rows: repeat(2, 1fr);
     row-gap: 55px;
 
-    padding-right: 60px;
+    padding-right: 70px;
   }
 }
 
@@ -180,7 +194,7 @@
     font-size: 30px;
     line-height: 37px;
 
-    padding-top: 18px;
+    padding-top: 14px;
 
     min-width: 162px;
     min-height: 72px;
@@ -200,7 +214,7 @@
   height: 19px;
 
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 13px;
   box-sizing: border-box;
 
   position: absolute;
@@ -236,10 +250,11 @@
   text-transform: uppercase;
 
   margin: 0;
-  margin-top: 18px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
+
+    margin-top: 11px;
   }
 
   @media (min-width: @desktop-width) {
@@ -259,8 +274,6 @@
   align-content: center;
 
   @media (min-width: @tablet-width) {
-    background-color: @additional-grey;
-
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 69px;
@@ -273,9 +286,28 @@
   @media (min-width: @desktop-width) {
     padding: 0;
 
-    background-color: @basic-grey;
-
     min-width: 690px;
+  }
+
+  &::before {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+
+      width: 100%;
+      height: 462px;
+
+      background-color: @additional-grey;
+      left: 0;
+      top: -9px;
+    }
+
+    @media (min-width: @desktop-width) {
+      left: unset;
+      right: -110px;
+      top: 0;
+      width: 57.3%;
+    }
   }
 }
 
@@ -283,13 +315,15 @@
   width: 311px;
   height: 240px;
 
+  position: relative;
+
   @media (min-width: @tablet-width) {
     position: absolute;
 
     width: 708px;
     height: 620px;
 
-    bottom: 20px;
+    bottom: 25px;
 
     justify-self: center;
   }
@@ -298,7 +332,8 @@
     width: 690px;
     height: 656px;
 
-    bottom: -20px;
+    bottom: -17px;
+    left: 40px;
 
     z-index: 1;
   }
@@ -311,6 +346,10 @@
 }
 
 .example__difference-image {
+  position: absolute;
+  left: -5px;
+  top: -13px;
+
   &--after {
     margin-left: 37px;
 
@@ -322,34 +361,41 @@
   @media (min-width: @tablet-width) {
     width: 708px;
     height: 620px;
+
+    left: 0;
+    top: -17px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 656px;
   }
 }
 
 .example__difference-slider {
   margin-left: 20px;
   margin-right: 20px;
-  margin-top: auto;
+  margin-top: 11px;
+
+  padding-left: 33px;
+  padding-right: 29px;
 
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
 
-  @media (min-width: @desktop-width) {
-    margin-bottom: 72px;
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    margin-top: auto;
+    margin-bottom: 8px;
+    margin-left: 11px;
+
+    padding-left: 0;
+    padding-right: 12px;
   }
 
-  &::before {
-    @media (min-width: @desktop-width) {
-      content: "";
-      width: 67%;
-      height: 462px;
-
-      position: absolute;
-      top: 0;
-      right: -16%; /* Вызывает баг с горизонтальным скроллом на большом разрешении окна браузера (>1500px) */
-
-      background-color: @additional-grey;
-    }
+  @media (min-width: @desktop-width) {
+    margin-bottom: 69px;
+    margin-left: 130px;
   }
 }
 
@@ -374,6 +420,14 @@
 
     padding-bottom: 5px;
 
+    &--before {
+      margin-right: 15px;
+
+      @media (min-width: @desktop-width) {
+        margin: 0;
+      }
+    }
+
     &:hover,
     &:focus {
       border-bottom: 1px solid @opacity-black;
@@ -396,6 +450,8 @@
 
   box-sizing: border-box;
   padding: 3px;
+  padding-left: 6px;
+  margin-top: 3px;
 
   @media (min-width: @tablet-width) {
     width: 428px;
@@ -410,6 +466,12 @@
     padding: 0;
 
     position: relative;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 9px;
   }
 }
 
@@ -454,10 +516,22 @@
       /* Возможно добавлю анимации позже */
     }
   }
+
+  @media (min-width: @desktop-width) {
+    left: 50%;
+    transform: translateX(-42%);
+  }
 }
 
 .example__conclusion-space {
+  @media (min-width: @tablet-width) {
+    display: block;
+    margin-top: 10px;
+  }
+
   @media (min-width: @desktop-width) {
-    margin-left: 63px;
+    display: inline;
+
+    margin-left: 59px;
   }
 }
