--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -5,11 +5,14 @@
   @media (min-width: @tablet-width) {
     margin-left: 30px;
     margin-right: 30px;
+    margin-bottom: 46px;
   }
 
   @media (min-width: @desktop-width) {
     margin-left: 110px;
     margin-right: 106px;
+
+    margin-top: 71px;
   }
 }
 
@@ -38,7 +41,7 @@
   @media (min-width: @tablet-width) {
     grid-template-columns: repeat(2, 1fr);
     row-gap: 37px;
-    column-gap: 137px;
+    column-gap: 57px;
   }
 
   @media (min-width: @desktop-width) {
@@ -67,8 +70,8 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: 0;
-      right: 0;
+      top: 40px;
+      right: 88px;
 
       width: 112px;
       height: 280px;
@@ -82,14 +85,37 @@
 
     &--second::before {
       background-image: url("../img/features/2.png");
+      top: 39px;
+      right: 90px;
     }
 
     &--third::before {
       background-image: url("../img/features/3.png");
+      top: 38px;
+      right: 90px;
     }
 
     &--fourth::before {
       background-image: url("../img/features/4.png");
+      right: 88px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &--first::before {
+      right: 10px;
+    }
+
+    &--second::before {
+      right: 15px;
+    }
+
+    &--third::before {
+      right: 13px;
+    }
+
+    &--fourth::before {
+      right: 13px;
     }
   }
 }
@@ -100,9 +126,17 @@
   line-height: 18px;
 
   margin: 0;
+  margin-top: 2px;
   margin-left: 20px + 60px;
 
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0;
+    margin-top: 111px;
+  }
 
   &::before {
     content: "";
@@ -110,7 +144,7 @@
     height: 60px;
     position: absolute;
     left: -80px;
-    top: 0;
+    top: -2px;
 
     background-color: @basic-green;
 
@@ -127,7 +161,7 @@
     content: "";
     position: absolute;
     left: -65px;
-    top: 15px;
+    top: 12px;
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
@@ -141,45 +175,92 @@
     height: 32px;
 
     background-image: url("../img/features/icon_leaf.svg");
-  }
-
-  &--powder::after {
-    width: 29px;
-    height: 31px;
-
-    left: -64px;
-
-    background-image: url("../img/features/icon_tub.svg");
 
     @media (min-width: @tablet-width) {
-      left: 27px;
+      left: 24px;
     }
   }
 
-  &--food::after {
-    width: 25px;
-    height: 30px;
+  &--powder {
+    &::before {
+      @media (min-width: @tablet-width) {
+        left: 1px;
+      }
 
-    left: -62px;
+      @media (min-width: @desktop-width) {
+        left: 0;
+      }
+    }
 
-    background-image: url("../img/features/icon_eat.svg");
+    &::after {
+      width: 29px;
+      height: 31px;
 
-    @media (min-width: @tablet-width) {
-      left: 30px;
+      left: -65px;
+      top: 11px;
+
+      background-image: url("../img/features/icon_tub.svg");
+
+      @media (min-width: @tablet-width) {
+        left: 26px;
+        top: -87px;
+      }
     }
   }
 
-  &--time::after {
-    width: 32px;
-    height: 33px;
+  &--food {
+    &::before {
+      @media (min-width: @desktop-width) {
+        left: -1px;
+      }
+    }
 
-    background-image: url("../img/features/icon_alarm.svg");
+    &::after {
+      width: 25px;
+      height: 30px;
+
+      left: -62px;
+      top: 13px;
+
+      background-image: url("../img/features/icon_eat.svg");
+
+      @media (min-width: @tablet-width) {
+        left: 28px;
+        top: -86px;
+      }
+    }
   }
 
+  &--time {
+    &::before {
+      @media (min-width: @tablet-width) {
+        left: 1px;
+      }
+
+      @media (min-width: @desktop-width) {
+        left: -1px;
+      }
+    }
+
+    &::after {
+      width: 32px;
+      height: 33px;
+
+      top: 11px;
+      left: -66px;
+
+      background-image: url("../img/features/icon_alarm.svg");
+
+      @media (min-width: @tablet-width) {
+        left: 25px;
+        top: -88px;
+      }
+    }
+  }
+}
+
+.features__description-tablet-break {
   @media (min-width: @tablet-width) {
-    font-size: 16px;
-    line-height: 24px;
-    margin: 0;
-    margin-top: 111px;
+    display: block;
   }
 }
