--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -7,7 +7,7 @@
 
   @media (min-width: @tablet-width) {
     margin-left: 70px;
-    margin-right: 70px;
+    margin-right: 68px;
   }
 
   @media (min-width: @desktop-width) {
@@ -16,13 +16,28 @@
   }
 }
 
-// .main-form__wrapper {
+.main-form__wrapper {
+  margin-bottom: 25px;
 
-// }
+  @media (min-width: @tablet-width) {
+    margin-bottom: 46px;
+  }
+}
 
-// .main-form__title {
+.main-form__title {
+  margin-top: 27px;
+  margin-bottom: 37px;
 
-// }
+  @media (min-width: @tablet-width) {
+    margin-top: 61px;
+    margin-bottom: 55px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 71px;
+    margin-bottom: 55px;
+  }
+}
 
 .main-form__description {
   font-size: 14px;
@@ -39,9 +54,16 @@
   display: grid;
   grid-template-rows: repeat(2, 1fr);
 
+  @media (min-width: @tablet-width) {
+    margin-bottom: 4px;
+  }
+
   @media (min-width: @desktop-width) {
     grid-template-rows: none;
     grid-template-columns: repeat(2, 1fr);
+    column-gap: 82px;
+
+    margin-bottom: 0;
   }
 }
 
@@ -49,13 +71,20 @@
   border: none;
 
   margin: 0;
+  margin-bottom: 23px;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 73px;
+  }
 
   &--border {
     position: relative;
+    padding-top: 30px;
+    margin-bottom: 28px;
 
     @media (min-width: @tablet-width) {
-      border: 1px solid @gray-overline;
+      padding: 0;
     }
 
     &::before,
@@ -80,6 +109,32 @@
       bottom: 0;
     }
   }
+
+  &--contacts {
+    @media (min-width: @tablet-width) {
+      margin-bottom: 70px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 68px;
+    }
+  }
+
+  &--comment {
+    @media (min-width: @tablet-width) {
+      margin-bottom: 64px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 66px;
+    }
+  }
+
+  &--extra {
+    @media (min-width: @tablet-width) {
+      margin-bottom: 36px;
+    }
+  }
 }
 
 .main-form__list {
@@ -91,16 +146,52 @@
   grid-template-rows: 1fr;
   row-gap: 14px;
 
+  @media (min-width: @tablet-width) {
+    row-gap: 22px;
+  }
+
   &--extra {
+    row-gap: 24px;
+
     @media (min-width: @tablet-width) {
       grid-template-rows: repeat(2, 1fr);
       grid-template-columns: repeat(2, 1fr);
+
+      row-gap: 42px;
+      column-gap: 58px;
     }
 
     @media (min-width: @desktop-width) {
       grid-template-rows: none;
       grid-template-columns: repeat(4, 1fr);
+      column-gap: 79px;
     }
+  }
+
+  &--radio {
+    row-gap: 24px;
+
+    @media (min-width: @tablet-width) {
+      row-gap: 23px;
+
+      border: 1px solid @gray-overline;
+      padding: 29px 0;
+    }
+  }
+}
+
+.main-form__list--inner {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+
+  @media (min-width: @tablet-width) {
+    row-gap: 28px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-rows: none;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 75px;
   }
 }
 
@@ -131,6 +222,8 @@
 
   position: relative;
 
+  margin-right: 15px;
+
   &--darken {
     color: @additional-black;
   }
@@ -142,6 +235,8 @@
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 30px;
+
+    margin-right: 20px;
   }
 }
 
@@ -160,6 +255,14 @@
   padding: 13.5px;
   box-sizing: border-box;
   border: none;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+
+    padding: 10px;
+    padding-left: 16px;
+  }
 
   &:hover {
     outline: 1px solid @grey-input-hover;
@@ -184,7 +287,8 @@
     box-sizing: border-box;
 
     @media (min-width: @tablet-width) {
-      height: 174px;
+      height: 172px;
+      padding-left: 19px;
     }
   }
 
@@ -192,17 +296,46 @@
     min-height: 41px;
   }
 
-  @media (min-width: @tablet-width) {
-    font-size: 20px;
-    line-height: 30px;
+  &[type="number"] {
+    padding-left: 19px;
+
+    @media (min-width: @desktop-width) {
+      padding-left: 17px;
+    }
   }
-}
 
-.main-form__input[type="email"],
-.main-form__input[type="tel"] {
-  height: 45px;
+  &[type="email"],
+  &[type="tel"] {
+    height: 45px;
 
-  padding-right: 40px;
+    padding-right: 40px;
+
+    @media (min-width: @desktop-width) {
+      height: 50px;
+    }
+  }
+
+  &[type="email"] {
+    @media (min-width: @tablet-width) {
+      padding-left: 21px;
+    }
+  }
+
+  &[type="tel"] {
+    @media (min-width: @tablet-width) {
+      padding-left: 19px;
+    }
+
+    & ~ .main-form__label {
+      @media (min-width: @tablet-width) {
+        margin-right: 15px;
+      }
+
+      @media (min-width: @desktop-width) {
+        margin-right: 18px;
+      }
+    }
+  }
 }
 
 .main-form__mail,
@@ -213,6 +346,10 @@
 
   width: 19px;
   height: 14px;
+
+  @media (min-width: @desktop-width) {
+    right: 20px;
+  }
 }
 
 .main-form__mail-icon {
@@ -224,7 +361,7 @@
   margin-left: 45px;
 
   @media (min-width: @tablet-width) {
-    margin-left: 65px;
+    margin-left: 88px;
   }
 }
 
@@ -234,11 +371,25 @@
   width: 28px;
   height: 28px;
 
-  left: -50px;
-  top: 0;
+  left: -45px;
+  top: -5px;
 
   border: 1px solid @grey-input-hover;
   border-radius: 50%;
+
+  @media (min-width: @tablet-width) {
+    width: 39px;
+    height: 39px;
+    left: -60px;
+    top: -7px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 38px;
+    height: 38px;
+    top: -6px;
+    left: -62px;
+  }
 }
 
 .main-form__input[type="radio"]:checked + .main-form__label::after {
@@ -247,16 +398,32 @@
   width: 13px;
   height: 13px;
 
-  left: -41px;
-  top: 9px;
+  left: -36px;
+  top: 2px;
 
   border-radius: 50%;
 
   background-color: @basic-green;
+
+  @media (min-width: @tablet-width) {
+    width: 18px;
+    height: 18px;
+    left: -49px;
+    top: 6px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: -51px;
+    top: 5px;
+  }
 }
 
 .main-form__input[type="checkbox"] + .main-form__label {
-  margin-left: 48px;
+  margin-left: 49px;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 59px;
+  }
 }
 
 .main-form__input[type="checkbox"] + .main-form__label::before {
@@ -266,9 +433,16 @@
   height: 26px;
 
   left: -48px;
-  top: 0;
+  top: -5px;
 
   border: 1px solid @grey-input-hover;
+
+  @media (min-width: @tablet-width) {
+    width: 38px;
+    height: 38px;
+    top: -6px;
+    left: -59px;
+  }
 }
 
 .main-form__input[type="checkbox"]:checked + .main-form__label::after {
@@ -278,10 +452,19 @@
   height: 16px;
 
   left: -43px;
-  top: 8px;
+  top: 2px;
 
   background-image: url("../img/main-form/checkbox-checked.svg");
   background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    width: 25px;
+    height: 24px;
+    background-size: 25px 24px;
+
+    left: -51px;
+    top: 3px;
+  }
 }
 
 .main-form__input[type="radio"]:checked:disabled + .main-form__label,
@@ -297,17 +480,44 @@
 
   position: relative;
 
+  &--contacts {
+    margin-bottom: 34px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 78px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-bottom: 77px;
+    }
+  }
+
+  &--comment {
+    margin-bottom: 39px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 76px;
+    }
+  }
+
+  &--extra {
+    margin-bottom: 37px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 63px;
+    }
+  }
+
   &--contacts::after,
   &--comment::after,
   &--extra::after {
     content: "";
     position: absolute;
-    top: 16px;
+    top: 15px;
 
     height: 2px;
 
     background-color: @basic-green;
-    /* Баг: не резинятся (исправим позже) */
   }
 
   &--contacts::before,
@@ -316,7 +526,7 @@
     @media (min-width: @tablet-width) {
       content: "";
       position: absolute;
-      top: 16px;
+      top: 22px;
       left: -70px;
 
       width: 30px;
@@ -331,18 +541,33 @@
     }
   }
 
+  &--contacts::before {
+    top: 22px;
+
+    @media (min-width: @desktop-width) {
+      top: 21px;
+    }
+  }
+
+  &--comment::before {
+    top: 21px;
+  }
+
   &--contacts::after {
     right: -20px;
     width: 99px;
+    top: 14px;
 
     @media (min-width: @tablet-width) {
       width: 145px;
       right: -186px;
+      top: 22px;
     }
 
     @media (min-width: @desktop-width) {
       width: 778px;
       right: -818px;
+      top: 21px;
     }
   }
 
@@ -351,8 +576,9 @@
     width: 158px;
 
     @media (min-width: @tablet-width) {
-      width: 478px;
+      width: 479px;
       right: -518px;
+      top: 21px;
     }
 
     @media (min-width: @desktop-width) {
@@ -363,16 +589,19 @@
 
   &--extra::after {
     right: -159px;
+    top: 12px;
     width: 136px;
 
     @media (min-width: @tablet-width) {
       width: 446px;
       right: -487px;
+      top: 22px;
     }
 
     @media (min-width: @desktop-width) {
       width: 1078px;
       right: -1119px;
+      top: 23px;
     }
   }
 
@@ -386,9 +615,18 @@
   display: grid;
   grid-template-rows: 1fr;
 
+  margin-top: 18px;
+
   @media (min-width: @tablet-width) {
     grid-template-rows: none;
     grid-template-columns: repeat(2, 1fr);
+
+    margin-bottom: 72px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 25px;
+    margin-bottom: 82px;
   }
 }
 
@@ -402,6 +640,9 @@
     min-height: 52px;
 
     font-size: 20px;
+
+    margin-top: 4px;
+    margin-left: 1px;
   }
 
   @media (min-width: @desktop-width) {
@@ -416,7 +657,21 @@
 
   text-align: center;
 
+  margin-top: 21px;
+  margin-bottom: 32px;
+
   @media (min-width: @tablet-width) {
     font-size: 16px;
+
+    margin: 0;
+
+    text-align: left;
+    margin-left: 30px;
+    align-self: center;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 4px;
+    margin-left: 41px;
   }
 }
