--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,10 +3,11 @@
 }
 
 .page-footer__wrapper {
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 39px;
-  margin-bottom: 22px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 39px;
+  padding-bottom: 22px;
 
   text-align: center;
 
@@ -18,23 +19,21 @@
     grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
 
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 55px;
-    margin-bottom: 60px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 55px;
+    padding-bottom: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 110px;
-    margin-right: 110px;
-    margin-top: 57px;
-    margin-bottom: 58px;
+    padding-left: 110px;
+    padding-right: 110px;
+    padding-top: 57px;
+    padding-bottom: 58px;
   }
 }
 
 .page-footer__logo {
-  border-bottom: 1px solid @gray-overline;
-
   &:hover {
     opacity: 0.8;
   }
@@ -54,5 +53,7 @@
     text-align: left;
     align-self: center;
     border: none;
+
+    margin-top: 2px;
   }
 }
